src/objects/c2g__CustomFormLayoutField__c.object
<CustomObject>
    <description>Stores the details of an input form field.</description>
    <fields>
        <fullName>c2g__CustomFormLayoutSection__c</fullName>
        <label>CustomForm Layout Section</label>
        <referenceTo>c2g__CustomFormLayoutSection__c</referenceTo>
        <relationshipLabel>CustomForm Layout Fields</relationshipLabel>
        <relationshipName>CustomFormLayoutFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveFrom__c</fullName>
        <label>Derive From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DisableWhen__c</fullName>
        <label>Disable When</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CustomForm Layout Field</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFLF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomForm Layout Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>